--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "maplibre-gl": "^5.6.1",
     "next": "15.4.1",
     "next-themes": "^0.4.6",
-    "openai": "^5.10.1",
+    "openai": "^5.22.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-markdown": "^10.1.0",
@@ -39,7 +39,8 @@
     "shiki": "^1.29.2",
     "solvice-vrp-solver": "0.6.0",
     "sonner": "^2.0.6",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -58,6 +59,7 @@
     "puppeteer": "^24.14.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.5",
-    "typescript": "^5"
+    "typescript": "^5",
+    "whatwg-fetch": "^3.6.20"
   }
 }
