chore: delete outdated security and OpenAI documentation
- Removed `docs/demo-security-recommendations.md` detailing deprecated demo security measures, cost controls, and feature priorities.
- Removed `docs/openai-optimization-summary.md` summarizing phase 1 optimization for model selection, telemetry, and prompt improvements.
- Deleted `docs/tiered-access-strategy.md` describing freemium model configurations for anonymous vs authenticated users.

Streamlines repository by discarding legacy, unused documentation.

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,7 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+/.playwright-mcp/chatkit-after-fix.png
+/.playwright-mcp/chatkit-error-state.png
+/.playwright-mcp/chatkit-success.png
+/.playwright-mcp/chatkit-working.png
