--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "concurrently --names \"API,WEB\" --prefix-colors \"blue,green\" \"pnpm dev:python\" \"pnpm dev:frontend\"",
+    "dev:frontend": "next dev",
+    "dev:python": "cd python-backend && uv run uvicorn app.main:app --reload --port 8000",
+    "dev:python-only": "cd python-backend && uv run uvicorn app.main:app --reload --port 8000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -16,6 +19,8 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@monaco-editor/react": "^4.7.0",
+    "@openai/agents": "^0.1.9",
+    "@openai/chatkit-react": "^1.1.1",
     "@radix-ui/react-collapsible": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
@@ -56,6 +61,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "concurrently": "^9.2.1",
     "eslint": "^9",
     "eslint-config-next": "15.4.1",
     "jest": "^30.0.4",
