--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:hydration": "node scripts/check-hydration.js"
+    "test:hydration": "node scripts/check-hydration.js",
+    "generate-schema": "tsx scripts/generate-vrp-schema.ts"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -65,6 +66,7 @@
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5",
+    "typescript-json-schema": "^0.65.1",
     "whatwg-fetch": "^3.6.20"
   }
 }
